# splitsprite

./: .gitignore  CMakeLists.txt
src/: splitsprite.cpp
